temporally remove html page of penance as it has not been published

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,20 +1,19 @@
 ---
 ---
 
-@article{chan2021salkg,
+@article{penance,
   abbr={MM'23},
   title={Think before You Leap: Content-Aware Low-Cost Edge-Assisted Video Semantic Segmentation},
   author={Yan, Mingxuan and Yi, Wang and Xuedou, Xiao and Zhiqing, Luo and Jianhua, He and Wei Wang},
   journal={Proceedings of the ACM International Conference on Multimedia (MM)},
   year={2023},
   doi={10.1145/3581783.3613808},
-  html={https://doi.org/10.1145/3581783.3613808},
   pdf={Penance.pdf},
   dimensions={true},
   selected={true},
 }
 
-@article{ma2021dss,
+@article{fiammetta,
   abbr={INFOCOM'23},
   title={From {Ember} to {Blaze}: {Swift} {Interactive} {Video} {Adaptation} via {Meta}-{Reinforcement} {Learning}},
   author={Xiao*, Xuedou and Yan*, Mingxuan and Zuo, Yingying and Liu, Boxi and Ruan, Paul and Cao, Yang and Wang, Wei},
@@ -28,7 +27,7 @@
 }
 
 
-@article{luo2023non,
+@article{robotscatter,
   abbr={IMWUT'23},
   title={Non-intrusive Anomaly Detection of Industrial Robot Operations by Exploiting Nonlinear Effect},
   author={Luo, Zhiqing and Yan, Mingxuan and Wang, Wei and Zhang, Qian},
