replaced publication pdfs with arxiv versions

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   journal={Proceedings of the ACM International Conference on Multimedia (MM)},
   year={2023},
   doi={10.1145/3581783.3613808},
-  pdf={Penance.pdf},
+  pdf={penance-arxiv.pdf},
   dimensions={true},
   selected={true},
 }
@@ -20,7 +20,7 @@
   year={2023},
   journal={Proceedings of the IEEE International Conference on Computer Communications (INFOCOM)},
   html={https://arxiv.org/abs/2301.05541},
-  pdf={Fiammetta.pdf},
+  pdf={fiammetta-arxiv.pdf},
   dimensions={true},
   selected={true},
   note={* indicates equal contribution}
@@ -35,7 +35,6 @@
   journal={Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT)},
   doi={10.1145/3569477},
   html={https://dl.acm.org/doi/abs/10.1145/3569477},
-  pdf={RobotScatter.pdf},
   dimensions={true},
   selected={false}
 }
